--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,8 +11,8 @@ jobs:
     name: Build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-        with:
+    #   - uses: actions/checkout@v2
+    #     with:
     #       fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
     #   - uses: sonarsource/sonarqube-scan-action@master
     #     env:
