--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,11 +39,12 @@ jobs:
 
       - name: Tag & Build the Docker image
         run: |
-          docker build -t tetris .
-          docker tag tetris atanubiswas/tetris:latest
+          docker build -t atanubiswas/tetris:$(echo $GITHUB_SHA | cut -c1-7) .
+          docker tag atanubiswas/tetris:$(echo $GITHUB_SHA | cut -c1-7) atanubiswas/tetris:latest
+
 
       - name: Push the Docker image
         run: |
-          docker push atanubiswas/tetris:latest
+          docker push atanubiswas/tetris:$(echo $GITHUB_SHA | cut -c1-7)
         env:
           DOCKER_CLI_ACI: true
